tests/asm-link/macro-@/rgbasm.err
error: label defined outside of a section
   ╭─[ test.asm:1:1 ]
   │
 1 │ foo: @bar
   │ ─┬─  
   │  ╰─── no section is active at this point
───╯
error: `@` is not a macro
   ╭─[ test.asm:1:6 ]
   │
 1 │ foo: @bar
   │      ┬  
   │      ╰── Macro call here
   │
   ├─[ <built-in>:1:1 ]
   │
 1 │ 
   │ │ 
   │ ╰─ a symbol by this name was defined here
───╯
2 errors generated.
